# DAS_Seismology_Workshop

./: .gitignore  404.html  CLAUDE.md  LICENSE  index.html  mkdocs.yml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
das_basics/: index.html
docs/: README.md  das_basics.md  eikonal_tomography.md  focal_mechanisms.md  phasenet_das.md
eikonal_tomography/: index.html
focal_mechanisms/: index.html
notebooks/: lab1_das_basics.ipynb  lab2_phasenet_das.ipynb  lab3_focal_mechanisms.ipynb  lab4_eikonal_tomography.ipynb
notebooks/lab1_das_basics/Scripts/DAS-proc/: CMakeLists.txt  README.md  RUNTHIS.sh  index.html  requirements.txt
notebooks/lab1_das_basics/Scripts/DAS-proc/cpp/src/: pyDAS.cpp
notebooks/lab1_das_basics/Scripts/DAS-proc/docs/: DAS_cut.md  DAS_db.md
notebooks/lab1_das_basics/Scripts/DAS-proc/docs/DAS_cut/: index.html
notebooks/lab1_das_basics/Scripts/DAS-proc/docs/DAS_db/: index.html
notebooks/lab1_das_basics/Scripts/DAS-proc/python/: DASutils.py
notebooks/lab1_das_basics/Scripts/DAS-proc/tests/: README.md  index.html
notebooks/lab1_das_basics/Scripts/DAS-proc/tests/dasutil_tests/: .gitignore  test_das_db.py
notebooks/lab1_das_basics/Scripts/DAS-proc/tests/dasutil_tests/expected/: mammoth.csv  ridgecrest-gap.csv  ridgecrest.csv
notebooks/lab1_das_basics/Scripts/DAS-proc/tests/dasutil_tests/native/: ncontext.py  test_highcut.py  test_lfilter_simple.py  test_lowcut.py  utils.py
notebooks/lab4_eikonal_tomography/: lab4_eikonal_tomography.ipynb
phasenet_das/: index.html
search/: search_index.json
(+58 files in other folders)
